@@ -1,3 +1,9 @@
+gnome-shell-extension-quiet-shortcuts (4) lernstick-13; urgency=medium
+
+  * fix meta import and add app to permission store
+
+ -- Thore Sommer <mail@thson.de>  Mon, 09 Jun 2025 11:00:00 +0200
+
 gnome-shell-extension-quiet-shortcuts (3) lernstick-13; urgency=medium
 
   * Update for GNOME 47 and 48
